Lot's of small fixes - settings log-on page: Why register button AND register link? / Also, why do we need register at all? I think we should just have it accessible from the settings page ONLY once authed? - Logarr Settings: `Vert height to "fit" - Settings submit buttons: Change to align left/color (Like monitorr) - All: Remove check for update from all pages. Should only exist on main info page - All: Change link order in footer to: - Settings page log-on container: Not a fan of the log-on container:

--- a/assets/css/logarr.css
+++ b/assets/css/logarr.css
@@ -1401,13 +1401,13 @@ input[name="imginput"]:focus {
     margin-top: 5rem;
     margin-bottom: 3rem;
     background-color: #1F1F1F;
-    height: 65.5rem;
+    height: 100%;
 }
 
 .object {
     float: right;
     width: 100%;
-    height: 65.5rem;
+    height: 58rem;
 }
 
 #version_check {
@@ -1587,6 +1587,10 @@ input[name="imginput"]:focus {
     font-weight: 600;
 }
 
+.alpaca-form-buttons-container {
+    text-align: left;
+}
+
 .radio {
     width: 10rem;
 }
@@ -1698,6 +1702,13 @@ div[data-alpaca-container-item-name="maxLines"], div[data-alpaca-container-item-
     margin: 2rem auto;
     width: 50%;
     padding: 2rem;
+}
+
+#login-container {
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
 }
 
 #login-form {
